📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -8294,5 +8294,221 @@
         "published": "Mon, 08 Dec 2025 19:55:08 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46196796\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/ford-and-sk-on-are-ending-their-u-s-battery-joint-venture/",
+        "title": "Ford and SK On are ending their U.S. battery joint venture",
+        "link": "https://techcrunch.com/2025/12/11/ford-and-sk-on-are-ending-their-u-s-battery-joint-venture/",
+        "published": "Thu, 11 Dec 2025 16:11:07 +0000",
+        "source": "TechCrunch",
+        "summary": "The factories live on; the joint venture will not."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/disney-signs-deal-with-openai-to-allow-sora-to-generate-ai-videos-featuring-its-characters/",
+        "title": "Disney signs deal with OpenAI to allow Sora to generate AI videos featuring its characters",
+        "link": "https://techcrunch.com/2025/12/11/disney-signs-deal-with-openai-to-allow-sora-to-generate-ai-videos-featuring-its-characters/",
+        "published": "Thu, 11 Dec 2025 15:21:05 +0000",
+        "source": "TechCrunch",
+        "summary": "Disney says that alongside the agreement, it will \"become a major customer of OpenAI,\" as it will use\u00a0its APIs to build new products, tools, and experiences, including for Disney+."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/842386/nintendo-switch-2-joy-con-2-controller-sonos-era-100-refurb-deal-sale",
+        "title": "A pair of Nintendo Switch 2 Joy-Con 2 controllers are $20 off at BJ&#8217;s",
+        "link": "https://www.theverge.com/gadgets/842386/nintendo-switch-2-joy-con-2-controller-sonos-era-100-refurb-deal-sale",
+        "published": "2025-12-11T11:07:29-05:00",
+        "source": "The Verge",
+        "summary": "The Nintendo Switch 2 comes with a pair of Joy-Con 2 controllers, but it\u2019s always good to have a second set around in case more people come over for a few rounds of Mario Kart World. BJ\u2019s Wholesale Club is offering a set of Joy-Con 2 controllers for $79.99 ($20 off), a new all-time low. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/800449/best-practical-smart-home-gift-ideas-2025",
+        "title": "33 practical smart home gifts that make everyday life a little easier",
+        "link": "https://www.theverge.com/gadgets/800449/best-practical-smart-home-gift-ideas-2025",
+        "published": "2025-12-11T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Smart home products are all about making everyday life a little easier, which is why they're some of the best and most thoughtful gifts you can give. Some people go all out building a multi-gadget IoT kingdom (like our resident smart home expert, Jen Pattison Tuohy), but a smart home is whatever your recipient wants [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/podcast/842340/trump-ai-tiktok-democracy-carr-first-amendment-ed-markey",
+        "title": "Sen. Ed Markey wants media companies to fight for the First Amendment",
+        "link": "https://www.theverge.com/podcast/842340/trump-ai-tiktok-democracy-carr-first-amendment-ed-markey",
+        "published": "2025-12-11T10:40:00-05:00",
+        "source": "The Verge",
+        "summary": "Today, I\u2019m talking with Sen. Ed Markey of Massachusetts, and you&#8217;ll hear me start with the only question I think anyone should be asking any politician in the federal government right now: What the hell is going on here? Sen. Markey didn\u2019t mince words with his answer. You\u2019ll hear him compare the Trump administration to [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/cursor-launches-pro-design-tools-figma/",
+        "title": "Cursor Launches an AI Coding Tool For Designers",
+        "link": "https://www.wired.com/story/cursor-launches-pro-design-tools-figma/",
+        "published": "Thu, 11 Dec 2025 16:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The 300-person startup hopes bringing designers aboard will give it an edge in an increasingly competitive AI software market."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/ces-2026-preview-what-to-expect-from-techs-biggest-conference-in-january-120000200.html?src=rss",
+        "title": "CES 2026 preview: What to expect from tech's biggest conference in January",
+        "link": "https://www.engadget.com/big-tech/ces-2026-preview-what-to-expect-from-techs-biggest-conference-in-january-120000200.html?src=rss",
+        "published": "Thu, 11 Dec 2025 16:06:49 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>CES doesn't start until January, but whispers of the products and announcements that could be in store for tech's biggest annual conference have already started to take shape. The CES 2026 show floor is officially open from January 6 through 9, although the show kicks off with events on Sunday January 4 and a host of press conferences on Monday. As always, product demos, announcements and networking will be happening at the Las Vegas Convention Center and surrounding hotels all over the city."
+    },
+    {
+        "id": "https://www.engadget.com/the-best-christmas-gifts-to-give-everyone-on-your-2025-holiday-shopping-list-170018456.html?src=rss",
+        "title": "The best Christmas gifts to give everyone on your 2025 holiday shopping list",
+        "link": "https://www.engadget.com/the-best-christmas-gifts-to-give-everyone-on-your-2025-holiday-shopping-list-170018456.html?src=rss",
+        "published": "Thu, 11 Dec 2025 16:00:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Finding the right gifts for everyone on your list this time of year can be a major source of stress. It can be even more daunting if you\u2019re trying to stick to a budget all while getting the folks you love things that they will really appreciate. But there\u2019s also a good chance you\u2019re getting fed bad gift ideas (and just as bad deals) if you\u2019re browsing the web frantically searching as we get closer and closer to the holidays.<br /><br />Allow us at Engadget to help you through it. Here, you\u2019ll"
+    },
+    {
+        "id": "https://www.engadget.com/deals/one-of-our-favorite-budgeting-apps-is-50-percent-off-for-new-users-154056449.html?src=rss",
+        "title": "One of our favorite budgeting apps is 50 percent off for new users",
+        "link": "https://www.engadget.com/deals/one-of-our-favorite-budgeting-apps-is-50-percent-off-for-new-users-154056449.html?src=rss",
+        "published": "Thu, 11 Dec 2025 15:40:56 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>With a new year just around the corner, now is the perfect time to take stock of your finances. A budgeting app can help with that, and right now you can get 50 percent off your first year of a Monarch Money plan. All you need to do is enter the code <strong>MONARCHVIP</strong> at <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=f9cd69a7-2172-4476-a391-04d87e530174&amp;featureId=text-link&amp;linkText=checkout&amp;cu"
+    },
+    {
+        "id": "https://www.engadget.com/deals/apples-airpods-pro-3-drop-to-a-new-record-low-of-199-222806888.html?src=rss",
+        "title": "Apple's AirPods Pro 3 drop to a new record low of $199",
+        "link": "https://www.engadget.com/deals/apples-airpods-pro-3-drop-to-a-new-record-low-of-199-222806888.html?src=rss",
+        "published": "Thu, 11 Dec 2025 15:27:57 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>No need to fret if you missed out on some of the best Black Friday deals this year \u2014 some of them have returned already. Case in point: <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0FQFB8FMG&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=42f7f263-d7c8-4a21-ad07-9121207a6244&amp;featureId=text-link&amp;merchantName=Amazon&amp;linkText=Apple%27s+AirPods+Pro+3&amp;custData=eyJzb3VyY2VOYW1lIjo"
+    },
+    {
+        "id": "https://gizmodo.com/darth-vaders-lightsaber-is-no-longer-the-most-expensive-star-wars-item-sold-at-auction-2000698170",
+        "title": "Darth Vader\u2019s Lightsaber Is No Longer the Most Expensive \u2018Star Wars\u2019 Item Sold at Auction",
+        "link": "https://gizmodo.com/darth-vaders-lightsaber-is-no-longer-the-most-expensive-star-wars-item-sold-at-auction-2000698170",
+        "published": "Thu, 11 Dec 2025 16:00:05 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Star Warstopart\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Star-Warstopart.jpg\" width=\"1920\" /><br /><br />Tom Jung's original 1977 half-sheet artwork for 'A New Hope' has just become the priciest piece of memorabilia from the galaxy far, far away."
+    },
+    {
+        "id": "https://gizmodo.com/ai-fails-to-win-times-person-of-the-year-this-time-2000698441",
+        "title": "AI Fails to Win Time\u2019s Person of the Year\u2026 This Time",
+        "link": "https://gizmodo.com/ai-fails-to-win-times-person-of-the-year-this-time-2000698441",
+        "published": "Thu, 11 Dec 2025 15:45:50 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Nvidia Unveils Robot Training Tech, New Gaming Chips, And Toyota Deal\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/01/Nvidia-CEO-Jensen-Huang-RTX-50-Series-GPU-1.jpg\" width=\"1500\" /><br /><br />Sorry to the Polymarket bettors."
+    },
+    {
+        "id": "https://gizmodo.com/nintendo-switch-2-price-hike-is-almost-certainly-coming-soon-2000698414",
+        "title": "A Nintendo Switch 2 Price Hike Is Almost Certainly Coming Soon",
+        "link": "https://gizmodo.com/nintendo-switch-2-price-hike-is-almost-certainly-coming-soon-2000698414",
+        "published": "Thu, 11 Dec 2025 15:38:39 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Donkey Kong Switch 2 3\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/07/Donkey-Kong-Switch-2-3.jpg\" width=\"1920\" /><br /><br />You can once again blame AI, this time for gaming getting more expensive."
+    },
+    {
+        "id": "https://gizmodo.com/no-need-to-buy-earbuds-or-speakers-denon-offers-a-subscription-for-its-gadgets-and-is-waiving-activation-fees-for-limited-holiday-deals-2000697735",
+        "title": "No Need to Buy Earbuds or Speakers, Denon Offers a Subscription for Its Gadgets and Is Waiving Activation Fees for Limited Holiday Deals",
+        "link": "https://gizmodo.com/no-need-to-buy-earbuds-or-speakers-denon-offers-a-subscription-for-its-gadgets-and-is-waiving-activation-fees-for-limited-holiday-deals-2000697735",
+        "published": "Thu, 11 Dec 2025 15:32:38 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"1hhmkwzb86xifgbzzbyic42mf01gwb4b\" class=\"attachment-full size-full wp-post-image\" height=\"961\" src=\"https://gizmodo.com/app/uploads/2025/12/1HhmKwzB86XifGbZZByiC42MF01gWb4b.jpg\" width=\"1440\" /><br /><br />Enjoy bold, rich, and premium sound without blowing your budget."
+    },
+    {
+        "id": "https://gizmodo.com/against-the-federal-moratorium-on-state-level-regulation-of-ai-2000698390",
+        "title": "Against the Federal Moratorium on State-Level Regulation of AI",
+        "link": "https://gizmodo.com/against-the-federal-moratorium-on-state-level-regulation-of-ai-2000698390",
+        "published": "Thu, 11 Dec 2025 15:20:50 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"President Trump Meets With Business Leaders At White House\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Trump_and_michael_dell-1.jpg\" width=\"1920\" /><br /><br />The common refrain that a patchwork of regulations would kill innovation doesn't pass the smell test."
+    },
+    {
+        "id": "https://mashable.com/video/his-and-hers-trailer-netflix-tessa-thompson-jon-bernthal",
+        "title": "His and Hers trailer: Tessa Thompson and Jon Bernthal join forces for murder mystery",
+        "link": "https://mashable.com/video/his-and-hers-trailer-netflix-tessa-thompson-jon-bernthal",
+        "published": "Thu, 11 Dec 2025 15:46:06 +0000",
+        "source": "Mashable",
+        "summary": "Tessa Thompson and Jon Bernthal star in \"His & Hers,\" a limited crime series coming to Netflix January 8."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-magic-the-gathering-spider-man-play-booster-box-deal",
+        "title": "The Magic: The Gathering Spider-Man Play Booster Box has hit a new record-low price \u2014 save over $90 at Amazon",
+        "link": "https://mashable.com/article/dec-11-magic-the-gathering-spider-man-play-booster-box-deal",
+        "published": "Thu, 11 Dec 2025 15:43:08 +0000",
+        "source": "Mashable",
+        "summary": "The Magic: The Gathering Marvel's Spider-Man Play Booster Box is on sale for $113.95 on Amazon. That's the lowest-ever price."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-lg-ultragear-curved-gaming-monitor-deal",
+        "title": "The 34-inch LG UltraGear curved gaming monitor is cheaper than it was on Black Friday",
+        "link": "https://mashable.com/article/dec-11-lg-ultragear-curved-gaming-monitor-deal",
+        "published": "Thu, 11 Dec 2025 15:36:50 +0000",
+        "source": "Mashable",
+        "summary": "The LG 34-inch UltraGear curved gaming monitor is on sale at Amazon for $356.99, down nearly 30% from its usual list price."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-sony-wh-1000xm6-headphones-deal",
+        "title": "Take your music seriously with Sonys XM6 headphones for their lowest price yet",
+        "link": "https://mashable.com/article/dec-11-sony-wh-1000xm6-headphones-deal",
+        "published": "Thu, 11 Dec 2025 15:31:52 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 11, get the Sony WH-1000XM6 headphones for their lowest price yet."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-airpods-pro-3-deal",
+        "title": "Record-low price alert: Weve never seen the AirPods Pro 3 this cheap at Walmart",
+        "link": "https://mashable.com/article/dec-11-airpods-pro-3-deal",
+        "published": "Thu, 11 Dec 2025 15:29:29 +0000",
+        "source": "Mashable",
+        "summary": "The Apple AirPods Pro 3 are on sale at Walmart for $199, down from the list price of $249. That's a 20% discount."
+    },
+    {
+        "id": "https://www.zdnet.com/article/nitecore-carbo-10000-gen-2-review/",
+        "title": "I dropped this power bank from waist level, and it proved its worth almost immediately",
+        "link": "https://www.zdnet.com/article/nitecore-carbo-10000-gen-2-review/",
+        "published": "Thu, 11 Dec 2025 15:47:00 GMT",
+        "source": "Latest news",
+        "summary": "The outdoors can be difficult for power banks, but this one by Nitecore is built to last."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-google-pixel-watch-hidden-features/",
+        "title": "Own a Google Pixel Watch? 7 hidden features that are incredibly useful (and where to find them)",
+        "link": "https://www.zdnet.com/article/best-google-pixel-watch-hidden-features/",
+        "published": "Thu, 11 Dec 2025 15:16:00 GMT",
+        "source": "Latest news",
+        "summary": "With the Pixel Watch 4, Google truly hit it out of the park with advanced functions and settings - and some of them even work with older models."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-send-live-video-to-911-from-android-phone/",
+        "title": "You can send live video to 911 from your Android phone in seconds now - here's how",
+        "link": "https://www.zdnet.com/article/how-to-send-live-video-to-911-from-android-phone/",
+        "published": "Thu, 11 Dec 2025 15:13:03 GMT",
+        "source": "Latest news",
+        "summary": "If 911 needs eyes on your situation, they'll send a prompt for you to share live video instantly."
+    },
+    {
+        "id": "https://gricha.dev/blog/the-highest-quality-codebase",
+        "title": "Show HN: I've asked Claude to improve codebase quality 200 times",
+        "link": "https://gricha.dev/blog/the-highest-quality-codebase",
+        "published": "Mon, 08 Dec 2025 21:33:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46197930\">Comments</a>"
+    },
+    {
+        "id": "https://arxiv.org/abs/2512.09643",
+        "title": "An Orbital House of Cards: Frequent Megaconstellation Close Conjunctions",
+        "link": "https://arxiv.org/abs/2512.09643",
+        "published": "Thu, 11 Dec 2025 15:01:44 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46232220\">Comments</a>"
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46232434",
+        "title": "Launch HN: BrowserBook (YC F24) \u2013 IDE for deterministic browser automation",
+        "link": "https://news.ycombinator.com/item?id=46232434",
+        "published": "Thu, 11 Dec 2025 15:18:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46232434\">Comments</a>"
+    },
+    {
+        "id": "https://rapha.land/craft-software-that-makes-people-feel-something/",
+        "title": "Craft software that makes people feel something",
+        "link": "https://rapha.land/craft-software-that-makes-people-feel-something/",
+        "published": "Thu, 11 Dec 2025 13:45:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46231274\">Comments</a>"
     }
 ]
