📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -8510,5 +8510,141 @@
         "published": "Thu, 11 Dec 2025 13:45:08 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46231274\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/runway-releases-its-first-world-model-adds-native-audio-to-latest-video-model/",
+        "title": "Runway releases its first world model, adds native audio to latest video model",
+        "link": "https://techcrunch.com/2025/12/11/runway-releases-its-first-world-model-adds-native-audio-to-latest-video-model/",
+        "published": "Thu, 11 Dec 2025 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Runway debuts a physics-aware world model that simulates reality to train agents and power video, robotics and avatar applications."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/842551/apple-airpods-pro-3-wireless-earbuds-deal-sale-2025",
+        "title": "The AirPods Pro 3 have dropped below $200 for the first time",
+        "link": "https://www.theverge.com/gadgets/842551/apple-airpods-pro-3-wireless-earbuds-deal-sale-2025",
+        "published": "2025-12-11T12:10:00-05:00",
+        "source": "The Verge",
+        "summary": "Apple\u2019s latest gadgets have gotten some notable discounts lately \u2014 including the recently released Apple Watch Series 11, which is still on sale for $100 off at Amazon. Now, we\u2019re seeing the AirPods Pro 3 drop down to their lowest price to date, with the noise-canceling earbuds going for just $199 ($50 off) at Amazon [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/842392/supergirl-trailer-warner-bros-dc-studios-james-gunn-release-date",
+        "title": "Supergirl\u2019s first trailer introduces the Woman of Tomorrow",
+        "link": "https://www.theverge.com/entertainment/842392/supergirl-trailer-warner-bros-dc-studios-james-gunn-release-date",
+        "published": "2025-12-11T12:05:29-05:00",
+        "source": "The Verge",
+        "summary": "The first trailer for DC Studios' Supergirl feature is finally here to give us a look at what the Woman of Tomorrow is made of. Though Superman's (technically) older cousin Kara Zor-El (Millie Alcock) was kind of a mess when we first met her, she's trying to pull it together in Supergirl's new trailer. The [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842573/disney-google-copyright-infringement-cease-and-desist",
+        "title": "Disney accuses Google of \u2018massive\u2019 copyright infringement following deal with OpenAI",
+        "link": "https://www.theverge.com/news/842573/disney-google-copyright-infringement-cease-and-desist",
+        "published": "2025-12-11T12:02:06-05:00",
+        "source": "The Verge",
+        "summary": "Disney has accused Google of engaging in copyright infringement on a \"massive scale,\" claiming its AI models have generated images resembling characters from Frozen, Deadpool, Star Wars, and others, according to a report from Variety. In a cease-and-desist letter sent to Google on Wednesday, Disney demands that the tech giant stop allegedly infringing on its [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842485/whatsapp-voice-mail-video-message-call-feature",
+        "title": "WhatsApp is trying to reinvent voicemail",
+        "link": "https://www.theverge.com/news/842485/whatsapp-voice-mail-video-message-call-feature",
+        "published": "2025-12-11T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "WhatsApp says it's making \"voicemails a thing of the past\" by introducing a new feature that pretty much works like voicemail. Missed call messages are rolling out as part of WhatsApp's latest feature drop, which makes it easier for you to leave voice or video notes in chats after you've called someone who doesn't answer [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/column/842359/vr-teens-gaming",
+        "title": "Relax, grown-ups: VR is doing fine",
+        "link": "https://www.theverge.com/column/842359/vr-teens-gaming",
+        "published": "2025-12-11T11:30:00-05:00",
+        "source": "The Verge",
+        "summary": "This is Lowpass by Janko Roettgers, a newsletter on the ever-evolving intersection of tech and entertainment, syndicated just for The Verge subscribers once a week. When news broke last week that Meta may cut the budget of its Meta Reality Labs unit by as much as 30 percent, followed by reports that the company is [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/disney-and-openais-deal-is-a-major-turning-point/",
+        "title": "The Disney-OpenAI Deal Redefines the AI Copyright War",
+        "link": "https://www.wired.com/story/disney-and-openais-deal-is-a-major-turning-point/",
+        "published": "Thu, 11 Dec 2025 16:49:37 +0000",
+        "source": "WIRED",
+        "summary": "Disney is hedging against the future. OpenAI is clearing a path for Sora. And together they\u2019ve made a blueprint for how AI and Hollywood can move forward."
+    },
+    {
+        "id": "https://www.engadget.com/ai/disney-has-accused-google-of-copyright-infringement-on-a-massive-scale-163737642.html?src=rss",
+        "title": "Disney has accused Google of copyright infringement on a 'massive scale'",
+        "link": "https://www.engadget.com/ai/disney-has-accused-google-of-copyright-infringement-on-a-massive-scale-163737642.html?src=rss",
+        "published": "Thu, 11 Dec 2025 16:37:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Disney has accused Google of copyright infringement on a &quot;massive scale,&quot; alleging that the tech giant is training its AI tools on protected materials as well as allowing those tools to generate infringing images and videos. <a href=\"https://variety.com/2025/digital/news/disney-google-ai-copyright-infringement-cease-and-desist-letter-1236606429/\"><em><ins>Variety</ins></em></a> reports that Disney attorneys sent a cease-and-desist letter to Google on Wednesday.</p>\n<p>\u201cGoogle is inf"
+    },
+    {
+        "id": "https://gizmodo.com/the-first-trailer-for-supergirl-welcomes-supermans-mighty-mess-of-a-cousin-2000696001",
+        "title": "The First Trailer for \u2018Supergirl\u2019 Welcomes Superman\u2019s Mighty Mess of a Cousin",
+        "link": "https://gizmodo.com/the-first-trailer-for-supergirl-welcomes-supermans-mighty-mess-of-a-cousin-2000696001",
+        "published": "Thu, 11 Dec 2025 16:59:36 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Supergirl Trailer Dc StudiOS\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/supergirl-trailer-DC-Studios.jpg\" width=\"1920\" /><br /><br />Milly Alcock goes punk rock as Kara Zor-El in the next DC Studios movie."
+    },
+    {
+        "id": "https://gizmodo.com/the-amazon-is-morphing-into-a-hypertropical-climate-and-its-as-apocalyptic-as-it-sounds-2000698491",
+        "title": "The Amazon Is Morphing Into a \u2018Hypertropical\u2019 Climate\u2014and It\u2019s as Apocalyptic as It Sounds",
+        "link": "https://gizmodo.com/the-amazon-is-morphing-into-a-hypertropical-climate-and-its-as-apocalyptic-as-it-sounds-2000698491",
+        "published": "Thu, 11 Dec 2025 16:50:23 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Amazon Rainforest Drought\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Amazon-rainforest-drought.jpg\" width=\"1920\" /><br /><br />A new study predicts that by 2100, the Amazon rainforest could experience up to 150 days of hot drought conditions each year, causing mass tree die-offs."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-apple-airpods-pro-3-deal",
+        "title": "Amazon just dropped the AirPods Pro 3 to their best price ever",
+        "link": "https://mashable.com/article/dec-11-apple-airpods-pro-3-deal",
+        "published": "Thu, 11 Dec 2025 16:23:46 +0000",
+        "source": "Mashable",
+        "summary": "The Apple AirPods Pro 3 are now down to their best price ever at Amazon: just $199. That beats their Black Friday price."
+    },
+    {
+        "id": "https://mashable.com/article/disney-openai-deal",
+        "title": "Disneys $1 billion deal with OpenAI will bring Disney characters to Sora",
+        "link": "https://mashable.com/article/disney-openai-deal",
+        "published": "Thu, 11 Dec 2025 16:05:46 +0000",
+        "source": "Mashable",
+        "summary": "As Hollywood titans and AI companies wrangle over AI copyright issues, Disney has signed a $1 billion deal with OpenAI."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-apple-airpods-4-deal",
+        "title": "Snag a pair of Apple AirPods 4 for nearly half off",
+        "link": "https://mashable.com/article/dec-11-apple-airpods-4-deal",
+        "published": "Thu, 11 Dec 2025 16:00:32 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 11, get the Apple AirPods 4 for 43% off at Walmart."
+    },
+    {
+        "id": "https://www.zdnet.com/article/neiko-pm220-label-printer-review/",
+        "title": "How I used a Bluetooth label printer to declutter my office workstation (and why you need one, too)",
+        "link": "https://www.zdnet.com/article/neiko-pm220-label-printer-review/",
+        "published": "Thu, 11 Dec 2025 16:58:00 GMT",
+        "source": "Latest news",
+        "summary": "The Nelko thermal label maker is a compact workhorse that connects to your phone or laptop for wireless printing."
+    },
+    {
+        "id": "https://www.zdnet.com/article/xtar-vx2-pro-battery-analyzer-review/",
+        "title": "I bought a $30 battery analyzer on Amazon, and it revealed the truth about my gadget drawer",
+        "link": "https://www.zdnet.com/article/xtar-vx2-pro-battery-analyzer-review/",
+        "published": "Thu, 11 Dec 2025 16:32:00 GMT",
+        "source": "Latest news",
+        "summary": "This Xtar charger not only powers your batteries but also refreshes and preps them for long-term usage."
+    },
+    {
+        "id": "https://www.ithoughtaboutthatalot.com/2025/the-things-i-want-to-say-to-my-boss",
+        "title": "Things I want to say to my boss",
+        "link": "https://www.ithoughtaboutthatalot.com/2025/the-things-i-want-to-say-to-my-boss",
+        "published": "Thu, 11 Dec 2025 16:35:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46233570\">Comments</a>"
+    },
+    {
+        "id": "https://github-incidents.pages.dev/",
+        "title": "Days since last GitHub incident",
+        "link": "https://github-incidents.pages.dev/",
+        "published": "Thu, 11 Dec 2025 16:52:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46233798\">Comments</a>"
     }
 ]
